[gd_scene load_steps=3 format=3 uid="uid://d2vd8t5phlene"]

[ext_resource type="Script" path="res://scenes/toolbox/examples/root/2d/themes/simple-dynamic-themes/simple-dynamic-themes.gd" id="1"]
[ext_resource type="Theme" uid="uid://cqrg63avdh4pb" path="res://scenes/toolbox/examples/root/2d/themes/simple-dynamic-themes/example-themes/theme-3b.tres" id="2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 1017.0
offset_bottom = 205.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "- Themes only apply to control nodes and windows. Non-control nodes break the inheritance of themes.
- Click buttons 1 or 2  to change the theme assigned to the root node.
- Controls inherit styles from their parents unless they specify their own.
- Button 3 has it's own theme BUT it only customizes the NORMAL style so other styles like HOVER get applied by any parent styles. Select theme 1 and then hover Button 3.

"
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10

[node name="OutputLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Your selection: "

[node name="ButtonContainer" type="Control" parent="."]
anchors_preset = 0
offset_left = 92.0
offset_top = 160.0
offset_right = 92.0
offset_bottom = 160.0

[node name="ThemeButton1" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 83.0
offset_top = 77.0
offset_right = 151.0
offset_bottom = 97.0
text = "Theme 1"

[node name="ThemeButton2" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 174.0
offset_top = 100.0
offset_right = 242.0
offset_bottom = 120.0
text = "Theme 2"

[node name="ThemeButton3" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 260.0
offset_top = 125.0
offset_right = 328.0
offset_bottom = 145.0
theme = ExtResource("2")
text = "Button 3"

[node name="ThemeButton4" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 348.0
offset_top = 155.0
offset_right = 416.0
offset_bottom = 175.0
text = "Reset"

[connection signal="pressed" from="ButtonContainer/ThemeButton1" to="." method="_on_ThemeButton1_pressed"]
[connection signal="pressed" from="ButtonContainer/ThemeButton2" to="." method="_on_ThemeButton2_pressed"]
[connection signal="pressed" from="ButtonContainer/ThemeButton4" to="." method="_on_ThemeButton4_pressed"]
